--- a/creerPartie.html
+++ b/creerPartie.html
@@ -3,15 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Ma boulangerie</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="boulangerie.css" />
-<!--    <script type="text/javascript" src="./boulangerie.js"> </script>-->
     <meta name="author" content="Eloïse DELHOMELLE">
-    <meta name="description" content="TD2">
+    <meta name="description" content="Projet individuel">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
-    <link rel="stylesheet" href="chargement_elements.css">
     <meta http-equiv="Cache-control" content="public" max-age="31536000">
-
+    <link rel="stylesheet" type="text/css" href="boulangerie.css" />
+    <link rel="stylesheet" href="chargement_elements.css">
 </head>
 
 <style media="screen">
