--- a/exterieur.html
+++ b/exterieur.html
@@ -2,10 +2,13 @@
 <html lang="en" >
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Ma boulangerie</title>
+    <meta name="author" content="Eloïse DELHOMELLE">
+    <meta name="description" content="Projet individuel">
+    <meta name="keywords" content="HTML,CSS,XML,JavaScript">
+    <meta http-equiv="Cache-control" content="public" max-age="31536000">
     <link rel="stylesheet" href="chargement_elements.css">
     <link rel="stylesheet" type="text/css" href="menu.css" />
-    <meta http-equiv="Cache-control" content="public" max-age="31536000">
 
 </head>
 <body style="
