--- a/stock.html
+++ b/stock.html
@@ -2,11 +2,13 @@
 <html lang="en" style="color: #555555">
 <head>
     <meta charset="UTF-8">
-    <title>Stock</title>
-    <link rel="stylesheet" href="chargement_elements.css">
-
-    <link rel="stylesheet" type="text/css" href="menu.css" />
+    <title>Ma boulangerie</title>
+    <meta name="author" content="Eloïse DELHOMELLE">
+    <meta name="description" content="Projet individuel">
+    <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <meta http-equiv="Cache-control" content="public" max-age="31536000">
+    <link rel="stylesheet" href="chargement_elements.css">
+    <link rel="stylesheet" type="text/css" href="menu.css" />
 
 </head>
 <body style="    background-image: url('./image/fond_boulangerie.png') ; background-size: cover;
