--- a/tuto_caisse_fin.html
+++ b/tuto_caisse_fin.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="fr" style="color: #555555">
 <head>
-    <title>My Bakery, FIN DU TUTORIEL</title>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <title>Ma boulangerie</title>
+    <meta name="author" content="Eloïse DELHOMELLE">
+    <meta name="description" content="Projet individuel">
+    <meta name="keywords" content="HTML,CSS,XML,JavaScript">
+    <meta http-equiv="Cache-control" content="public" max-age="31536000">
     <link rel="stylesheet" type="text/css" href="menu.css" />
     <link rel="stylesheet" href="chargement_elements.css">
-
-    <meta http-equiv="Cache-control" content="public" max-age="31536000">
-
-
-
 </head>
 <!--https://openclassrooms.com/forum/sujet/input-placer-le-curseur-automatiquement-dedans-80024-->
 <body style="margin: 0;
