--- a/tuto_ext.html
+++ b/tuto_ext.html
@@ -2,9 +2,12 @@
 <html lang="fr" style="color: #555555" >
 <head>
     <meta charset="UTF-8">
-    <title>My Bakery, TUTORIEL</title>
-    <link rel="stylesheet" href="chargement_elements.css">
+    <title>Ma boulangerie</title>
+    <meta name="author" content="Eloïse DELHOMELLE">
+    <meta name="description" content="Projet individuel">
+    <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <meta http-equiv="Cache-control" content="public" max-age="31536000">
+    <link rel="stylesheet" href="chargement_elements.css">
 
 </head>
 <style>
