--- a/tuto_payer.html
+++ b/tuto_payer.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr" style="background-image: url('image/fondfinal.png'); background-size: cover;color: #555555">
 <head>
-    <title>My Bakery, TUTORIEL</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="chargement_elements.css">
+    <meta charset="UTF-8">
+    <title>Ma boulangerie</title>
+    <meta name="author" content="Eloïse DELHOMELLE">
+    <meta name="description" content="Projet individuel">
+    <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <meta http-equiv="Cache-control" content="public" max-age="31536000">
+    <link rel="stylesheet" href="chargement_elements.css">
 
 </head>
 <style>
