--- a/demandeEnregistrement_creer.html
+++ b/demandeEnregistrement_creer.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
-    <title>My Bakey _ caisse</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="chargement_elements.css">
+    <meta charset="UTF-8">
+    <title>Ma boulangerie</title>
+    <meta name="author" content="Eloïse DELHOMELLE">
+    <meta name="description" content="Projet individuel">
+    <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <meta http-equiv="Cache-control" content="public" max-age="31536000">
-
+    <link rel="stylesheet" href="chargement_elements.css">
 
 </head>
 <style>
