--- a/demande_tuto_ou_non.html
+++ b/demande_tuto_ou_non.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Ma boulangerie</title>
-    <meta charset="utf-8">
     <meta name="author" content="Eloïse DELHOMELLE">
     <meta name="description" content="Projet individuel">
-    <meta name="keywords" content="HTML,CSS,JavaScript">
-    <link rel="stylesheet" href="chargement_elements.css">
+    <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <meta http-equiv="Cache-control" content="public" max-age="31536000">
+    <link rel="stylesheet" href="chargement_elements.css">
 
 </head>
 
