--- a/init.html
+++ b/init.html
@@ -3,21 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Ma boulangerie</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="boulangerie.css" />
     <meta name="author" content="Eloïse DELHOMELLE">
-    <meta name="description" content="PI">
+    <meta name="description" content="Projet individuel">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
-    <link rel="stylesheet" href="chargement_elements.css">
     <meta http-equiv="Cache-control" content="public" max-age="31536000">
-
+    <link rel="stylesheet" type="text/css" href="boulangerie.css" />
+    <link rel="stylesheet" href="chargement_elements.css">
 </head>
-<script>
-    /*var myAudio = document.createElement("audio");
-    myAudio.src = "hilal.mp3";
-    myAudio.play();
-    //myAudio.pause();
-</script>
+
 <body>
 <p style="position: absolute; top: 0;">
     Tourne l'écran dans l'autre sens
