--- a/magasin.html
+++ b/magasin.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" style="">
 <head>
-    <title>My Bakey _ caisse</title>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <title>Ma boulangerie</title>
+    <meta name="author" content="Eloïse DELHOMELLE">
+    <meta name="description" content="Projet individuel">
+    <meta name="keywords" content="HTML,CSS,XML,JavaScript">
+    <meta http-equiv="Cache-control" content="public" max-age="31536000">
     <link rel="stylesheet" href="chargement_elements.css">
     <link rel="stylesheet" href="menu.css">
-    <meta http-equiv="Cache-control" content="public" max-age="31536000">
 
 
 </head>
