déplacement style dans header

--- a/creerPartie.html
+++ b/creerPartie.html
@@ -9,14 +9,14 @@
     <meta http-equiv="Cache-control" content="public" max-age="31536000">
     <link rel="stylesheet" type="text/css" href="boulangerie.css" />
     <link rel="stylesheet" href="chargement_elements.css">
-</head>
+    <style media="screen">
+        input, button{
+            padding: 7px;
+            height: 40px;
+        }
+    </style></head>
 
-<style media="screen">
-    input, button{
-        padding: 7px;
-        height: 40px;
-    }
-</style>
+
 <body>
 <p style="position: absolute; top: 0;">
     Tourne l'écran dans l'autre sens
