--- a/debut_jeu.html
+++ b/debut_jeu.html
@@ -16,7 +16,7 @@
     Tourne l'écran dans l'autre sens
 </p>
 <div class="preload">
-    <img src="image/chat.png" alt="avion" class="avion">
+    <img src="image/chat.png" alt="chat_chargement" class="avion">
     <h3>Chargement de My Bakery...</h3>
 </div>
 <section>
@@ -69,7 +69,7 @@ right:67px;
 
 "></span>
 </div>
-<img src="image/chat.png" style="
+<img alt = "chat" src="image/chat.png" style="
 display: block; margin : auto;margin-top:1em; width: 20em" />
     <script>
         console.log(localStorage);
