--- a/demandeEnregistrement_creer.html
+++ b/demandeEnregistrement_creer.html
@@ -46,7 +46,7 @@
     Tourne l'écran dans l'autre sens
 </p>
 <div class="preload">
-    <img src="image/chat.png" alt="avion" class="avion">
+    <img src="image/chat.png" alt="chat_chargement" class="avion">
     <h3>Chargement de My Bakery...</h3>
 </div>
 <section>
