--- a/demande_paiement.html
+++ b/demande_paiement.html
@@ -35,7 +35,7 @@
 
 
 <div class="preload">
-    <img src="image/chat.png" alt="avion" class="avion">
+    <img src="image/chat.png" alt="chat_chargement" class="avion">
     <h3>Chargement de My Bakery...</h3>
 </div>
 <section>
@@ -47,19 +47,19 @@
 <input type="button" value="non" id="non">
 </div>
 <div id="deco">
-    <img id="vase_fleurs" src="image/magasin/vase_fleurs.png" style="display:none;position:absolute;width: 11%; left: 18%; bottom: 35%">
-    <img id="porte" src="image/magasin/porte_delabree.png" style="position:absolute;width: 12%; height: 40%; left: 30%; bottom: 42%">
-    <img id="fenetre" src="image/magasin/fenetre_delabree.png" style="position:absolute;width: 12%; right: 42%; top: 24%">
-    <img id="fenetre_droite" src="image/magasin/fenetre_droite_delabree.png" style="position:absolute;width: 7%; right: 15%; top: 20%">
-    <img id="cloche" src="image/magasin/cloche.png" style="display:none;width: 3%; position: absolute; top: 20%; left: 35%;transform: scaleX(-1); transform: rotate(30deg)">
-    <img id="lampe" src="image/magasin/lampe.png" style="display:none;width: 6%; position: absolute; top: 18%; left: 5%;">
-    <img id="canape" src="image/magasin/canape.png" style="display:none;position: absolute;    width: 21%; top: 35%; right: 33%">
-    <img id="fontaine" src="image/magasin/fontaine.png" style="display:none;width: 15%; position: absolute; top: 45%; right: 20%">
-    <img id="lavande" src="image/magasin/lavande.png"     style="display:none;transform: scaleX(-1);width: 10%; position: absolute; top: 60%; right: 20%">
-    <img id="table_salon" src="image/magasin/table_salon.png" hidden style="position: absolute;    width: 18%; top: 70%; right: 25%">
-    <img id="tableau" src="image/magasin/tableau.png" style="display:none;width: 8%; position: absolute; top: 8%; right: 33%">
-    <img id="tapis" hidden src="image/magasin/tapis.png" style="position: absolute ;width: 15%; left: 27%; top: 53%">
-    <img id="presentoire" src="image/presentoire_niveau0.png" style="position: absolute ;width: 15%;  top: 50%; transform: scaleX(-1)">
+    <img alt="vase_fleurs" id="vase_fleurs" src="image/magasin/vase_fleurs.png" style="display:none;position:absolute;width: 11%; left: 18%; bottom: 35%">
+    <img alt="porte" id="porte" src="image/magasin/porte_delabree.png" style="position:absolute;width: 12%; height: 40%; left: 30%; bottom: 42%">
+    <img alt="fenetre" id="fenetre" src="image/magasin/fenetre_delabree.png" style="position:absolute;width: 12%; right: 42%; top: 24%">
+    <img alt="fenetre_droite"id="fenetre_droite" src="image/magasin/fenetre_droite_delabree.png" style="position:absolute;width: 7%; right: 15%; top: 20%">
+    <img alt="cloche"id="cloche" src="image/magasin/cloche.png" style="display:none;width: 3%; position: absolute; top: 20%; left: 35%;transform: scaleX(-1); transform: rotate(30deg)">
+    <img alt="lampe"id="lampe" src="image/magasin/lampe.png" style="display:none;width: 6%; position: absolute; top: 18%; left: 5%;">
+    <img alt="canape"id="canape" src="image/magasin/canape.png" style="display:none;position: absolute;    width: 21%; top: 35%; right: 33%">
+    <img alt="fontaine"id="fontaine" src="image/magasin/fontaine.png" style="display:none;width: 15%; position: absolute; top: 45%; right: 20%">
+    <img alt="lavande"id="lavande" src="image/magasin/lavande.png"     style="display:none;transform: scaleX(-1);width: 10%; position: absolute; top: 60%; right: 20%">
+    <img alt="table_salon"id="table_salon" src="image/magasin/table_salon.png" hidden style="position: absolute;    width: 18%; top: 70%; right: 25%">
+    <img alt="tableau"id="tableau" src="image/magasin/tableau.png" style="display:none;width: 8%; position: absolute; top: 8%; right: 33%">
+    <img alt="tapis"id="tapis" hidden src="image/magasin/tapis.png" style="position: absolute ;width: 15%; left: 27%; top: 53%">
+    <img alt="presentoire"id="presentoire" src="image/presentoire_niveau0.png" style="position: absolute ;width: 15%;  top: 50%; transform: scaleX(-1)">
 
 </div>
 <script>
