--- a/magasin.html
+++ b/magasin.html
@@ -27,7 +27,7 @@ margin: 0;
 	width: 100%;">
 
 <div class="preload">
-    <img src="image/chat.png" alt="avion" class="avion" style="position:absolute;">
+    <img src="image/chat.png" alt="chat_chargement" class="avion" style="position:absolute;">
     <h3 style="position:absolute;">Chargement de My Bakery...</h3>
 
 </div>
@@ -40,10 +40,10 @@ margin: 0;
     <script src="charger.js"></script>
 
 
-    <img src="image/fond_magasin.jpg" style=" position: absolute; top: 0; width:100%;height: 100%;">
+    <img src="image/fond_magasin.jpg" alt="fond_magasain" style=" position: absolute; top: 0; width:100%;height: 100%;">
     <div style="position:absolute; text-align: center; width: 100%; height: 95%">
         <!--MENU-->
-        <img src="image/fleche.svg" style="position: absolute; bottom: 0; left: 0;width: 7em; transform: rotate(-90deg)" title="RETOUR" onclick="location='exterieur.html'">
+        <img src="image/fleche.svg" alt="fleche_retour" style="position: absolute; bottom: 0; left: 0;width: 7em; transform: rotate(-90deg)" title="RETOUR" onclick="location='exterieur.html'">
 
         <div class="dropdown" style="float: left; ">
             <button onclick="location='index.html'" class="dropbtn" style="color:#555555;background-color: orange; padding:0.5em 1em 0.5em 1em; font-size: 2em; border-radius: 1em">MENU</button>
@@ -55,7 +55,7 @@ margin: 0;
         <!--PIECES-->
         <div style="position: absolute;bottom: 0px; right: 0px; display: inline-block; text-align: center">
             <span id="pieces" style="font-size: 2em"></span>
-            <img src="image/sous.png" style="width: 6em; ">
+            <img src="image/sous.png" alt="sous" style="width: 6em; ">
         </div>
         <script>
             nb_pieces = localStorage.getItem("pieces");
