--- a/stock.html
+++ b/stock.html
@@ -22,7 +22,7 @@
 ">
 
 <div class="preload">
-    <img src="image/chat.png" alt="avion" class="avion" style="position:absolute;">
+    <img src="image/chat.png" alt="chat_chargement" class="avion" style="position:absolute;">
     <h3 style="position:absolute;">Chargement de My Bakery...</h3>
 
 </div>
@@ -32,7 +32,7 @@
 <section>
     <script src="charger.js"></script>
 
-<img src="image/fleche.svg" style="position: absolute; bottom: 0; left: 0;width: 7em; transform: rotate(-90deg)" title="RETOUR" onclick="location='caisse.html'">
+<img src="image/fleche.svg" alt="fleche_retour" style="position: absolute; bottom: 0; left: 0;width: 7em; transform: rotate(-90deg)" title="RETOUR" onclick="location='caisse.html'">
 
 <div class="dropdown" style="float: left; position: absolute">
     <button onclick="myFunction()" class="dropbtn" style="color:#555555;background-color: orange; padding:0.5em 1em 0.5em 1em; font-size: 2em; border-radius: 1em">MENU</button>
@@ -115,7 +115,7 @@ function tostring_item(nom_prod) {
         <td style="border: solid; border-color:saddlebrown;"><input class="9" alt="tarte au citron" type="image" src="image/stock/tarte_citron.png" style="width: 8em">
     </tr>
 </table>
-<img id="presentoire" src="image/presentoire_niveau0.png" style="position: absolute ; width: 25em;bottom: 1.5em; right: 0em">
+<img id="presentoire" alt="presentoire" src="image/presentoire_niveau0.png" style="position: absolute ; width: 25em;bottom: 1.5em; right: 0em">
 </div>
     <div class="survol">
         <div class="bulle">
@@ -165,7 +165,7 @@ right:67px;
 
 "></span>
             </div>    </div>
-        <img src="image/chat.png" style="position: absolute; display: block; right: 7em; bottom: 2em">
+        <img src="image/chat.png" alt="chat" style="position: absolute; display: block; right: 7em; bottom: 2em">
     </div>
     <script>
         //infobulle et image grisée
