--- a/tuto_ext.html
+++ b/tuto_ext.html
@@ -24,14 +24,14 @@ background-color: #2980B9">
     Tourne l'écran dans l'autre sens
 </p>
 <div class="preload">
-    <img src="image/chat.png" alt="avion" class="avion">
+    <img src="image/chat.png" alt="chat_chargement" class="avion">
     <h3>Chargement de My Bakery...</h3>
 </div>
 <section>
     <script src="charger.js"></script>
 
 
-<img src="image/paysage_exterieur.png" style=" position: absolute; left: 20%;top: 0em;height: 100%">
+<img src="image/paysage_exterieur.png" alt="paysage_exterieur" style=" position: absolute; left: 20%;top: 0em;height: 100%">
 <div id="magasin" style="font-size: 1.5em;position: absolute; left: 29.5%; top: 30%; width: 25%; height: 41%;" onclick="location = 'tuto_magasin.html'">
         <span style="font-weight: 1000; text-shadow: -1px -1px white, 1px 1px #333;  color: orangered;position:absolute; top: 20%; left: 30%">
             MAGASIN
@@ -60,7 +60,7 @@ position:relative;
 top:5px">Nous sommes à l'extérieur de la boulangerie, il y a un magasin à côté. Allons voir ce qu'il s'y trouve!</span>
 </div>
 
-<img src="image/chat.png" style="top: 60%; left: 50%; position:absolute;">
+<img src="image/chat.png" alt="chat" style="top: 60%; left: 50%; position:absolute;">
 </section>
 </body>
 
