--- a/tuto_ext2.html
+++ b/tuto_ext2.html
@@ -23,21 +23,21 @@ background-color: #2980B9">
     Tourne l'écran dans l'autre sens
 </p>
 <div class="preload">
-    <img src="image/chat.png" alt="avion" class="avion">
+    <img src="image/chat.png" alt="chat_chargement" class="avion">
     <h3>Chargement de My Bakery...</h3>
 </div>
 <section>
     <script src="charger.js"></script>
-<img src="image/paysage_exterieur.png" style=" position: absolute; left: 20%;top: 0em;height: 100%">
-<img id="retour" src="image/fleche.svg" style="display: none;position: absolute; bottom: 0; left: 0;width: 7em; transform: rotate(-90deg)" title="BOULANGERIE" >
-<div id="magasin" style="font-size: 2em;position: absolute; left: 29.5%; top: 30%; width: 25%; height: 41%;" onclick="location='tuto_magasin2.html'">
+<img src="image/paysage_exterieur.png" alt="paysage_exterieur" style=" position: absolute; left: 20%;top: 0em;height: 100%">
+<img id="retour" src="image/fleche.svg" alt="fleche_retour" style="display: none;position: absolute; bottom: 0; left: 0;width: 7em; transform: rotate(-90deg)" title="BOULANGERIE" >
+<div id="magasin" style="font-size: 2em;position: absolute; left: 29.5%; top: 30%; width: 25%; height: 41%;"  onclick="location='tuto_magasin2.html'">
         <span style="font-weight: 1000; text-shadow: -1px -1px white, 1px 1px #333;  color: orangered;position:absolute; top: 20%; left: 30%">
             MAGASIN
         </span>
 </div>
 
 
-<img onclick="remplir_bulle()" id="fleche" src="image/next.png" title="SUIVANT" style="display: none; width: 10%; position:absolute;bottom: 10%; right: 10%">
+<img onclick="remplir_bulle()" id="fleche" alt="fleche_next" src="image/next.png" title="SUIVANT" style="display: none; width: 10%; position:absolute;bottom: 10%; right: 10%">
 
 <div id="zone2" style="position: absolute; width: 500px; height: 100px; background-color: "> </div>
 
