--- a/tuto_stock.html
+++ b/tuto_stock.html
@@ -19,13 +19,13 @@
     Tourne l'écran dans l'autre sens
 </p>
 <div class="preload">
-    <img src="image/chat.png" alt="avion" class="avion">
+    <img src="image/chat.png" alt="chat_chargement" class="avion">
     <h3>Chargement de My Bakery...</h3>
 </div>
 <section>
     <script src="charger.js"></script>
 
-<img id="retour" src="image/fleche.svg" style="display:none;position: absolute; bottom: 0; left: 0;width: 7em; transform: rotate(-90deg)" title="RETOUR" onclick="location='caisse.html'">
+<img id="retour" src="image/fleche.svg" alt="fleche_retour"style="display:none;position: absolute; bottom: 0; left: 0;width: 7em; transform: rotate(-90deg)" title="RETOUR" onclick="location='caisse.html'">
 <div id="zone2" style="position: absolute;  width: 750px; "> </div>
 
 <div id="produits" style="left: 0;">
@@ -48,9 +48,9 @@
         </tr>
     </table>
 </div>
-    <img id="presentoire" src="image/presentoire_niveau0.png" style="position: absolute ; width: 30%;bottom: 1.5em; right: 0em">
+    <img id="presentoire" alt="presentoire" src="image/presentoire_niveau0.png" style="position: absolute ; width: 30%;bottom: 1.5em; right: 0em">
 
-    <img onclick="remplir_bulle()" id="fleche" src="image/next.png" title="SUIVANT" style="position: absolute;display: none; width: 10%; bottom: 0%; right: 10%">
+    <img onclick="remplir_bulle()" id="fleche" alt="fleche_suivant" src="image/next.png" title="SUIVANT" style="position: absolute;display: none; width: 10%; bottom: 0%; right: 10%">
 <div id="bulle" style="position: absolute;
     right:30%;
     bottom: 40%;
