--- a/demande_tuto_ou_non.html
+++ b/demande_tuto_ou_non.html
@@ -31,7 +31,7 @@
 
 
 <div class="preload">
-    <img src="image/chat.png" alt="avion" class="avion">
+    <img src="image/chat.png" alt="chat_chargement" class="avion">
     <h3>Chargement de My Bakery...</h3>
 </div>
 <section>
