--- a/exterieur.html
+++ b/exterieur.html
@@ -23,7 +23,7 @@ margin: 0;
 	width: 100%;">
 
 <div class="preload">
-    <img src="image/chat.png" alt="avion" class="avion" style="position:absolute;">
+    <img src="image/chat.png" alt="chat_chargement" class="avion" style="position:absolute;">
     <h3 style="position:absolute;">Chargement de My Bakery...</h3>
 
 </div>
@@ -36,7 +36,7 @@ margin: 0;
 
 
 
-    <img src="image/paysage_exterieur.png" style=" position: absolute; top: 0; width:100%;height: 100%;">
+    <img src="image/paysage_exterieur.png" alt = "paysage_exterieur" style=" position: absolute; top: 0; width:100%;height: 100%;">
     <div class="dropdown" style="float: left; position: absolute">
         <button onclick="location='index.html'" class="dropbtn" style="color:#555555;background-color: orange; padding:0.5em 1em 0.5em 1em; font-size: 2em; border-radius: 1em">MENU</button>
 
@@ -60,7 +60,7 @@ toggle between hiding and showing the dropdown content */
             }
         }
     }</script>
-<img src="image/fleche.svg" style="position: absolute; bottom: 0; left: 0;width: 7em; transform: rotate(-90deg)" title="BOULANGERIE" onclick="location='caisse.html'">
+<img src="image/fleche.svg" alt="fleche_retour" style="position: absolute; bottom: 0; left: 0;width: 7em; transform: rotate(-90deg)" title="BOULANGERIE" onclick="location='caisse.html'">
 <div id="magasin" style="font-size: 2em;position: absolute; left: 18%; top: 30%; width: 35%; height: 43%;" onclick="location='magasin.html'">
         <span style="font-weight: 1000; text-shadow: -1px -1px white, 1px 1px #333;  color: orangered;position:absolute; top: 20%; left: 30%">
             MAGASIN
