--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body >
 
 <div class="preload">
-    <img src="image/chat.png" alt="avion" class="avion">
+    <img src="image/chat.png" alt="chat_chargement" class="avion">
     <h3>Chargement de My Bakery...</h3>
 
 
