--- a/init.html
+++ b/init.html
@@ -24,7 +24,7 @@
     Tourne l'écran dans l'autre sens
 </p>
 <div class="preload">
-    <img src="image/chat.png" alt="avion" class="avion">
+    <img src="image/chat.png" alt="chargement_chat" class="avion">
     <h3>Chargement de My Bakery...</h3>
 </div>
 <section>
@@ -90,7 +90,7 @@ right:67px;
 
 "></span>
         </div>    </div>
-    <img src="image/chat.png" style="position: absolute; display: block; right: 2em; bottom: 2em">
+    <img src="image/chat.png" alt="chat" style="position: absolute; display: block; right: 2em; bottom: 2em">
 </div>
 
 
