--- a/init2.html
+++ b/init2.html
@@ -26,7 +26,7 @@
 
 
 <div class="preload">
-    <img src="image/chat.png" alt="avion" class="avion">
+    <img src="image/chat.png" alt="chargement_chat" class="avion">
     <h3>Chargement de My Bakery...</h3>
 </div>
 <section>
@@ -88,7 +88,7 @@ right:67px;
 
 "></span>
         </div>    </div>
-    <img src="image/chat.png" style="position: absolute; display: block; right: 2em; bottom: 2em">
+    <img src="image/chat.png" alt="chat" style="position: absolute; display: block; right: 2em; bottom: 2em">
 </div>
 <script>
     document.getElementById("menupcp").addEventListener("click", function(){
