--- a/supprimer_joueur.html
+++ b/supprimer_joueur.html
@@ -45,7 +45,7 @@
     Tourne l'écran dans l'autre sens
 </p>
 <div class="preload">
-    <img src="image/chat.png" alt="avion" class="avion">
+    <img src="image/chat.png" alt="chat_chargement" class="avion">
     <h3>Chargement de My Bakery...</h3>
 </div>
 <section>
