--- a/tuto_caisse_fin.html
+++ b/tuto_caisse_fin.html
@@ -19,13 +19,13 @@
     Tourne l'écran dans l'autre sens
 </p>
 <div class="preload">
-    <img src="image/chat.png" alt="avion" class="avion">
+    <img src="image/chat.png" alt="chat_chargement" class="avion">
     <h3>Chargement de My Bakery...</h3>
 </div>
 <section>
     <script src="charger.js"></script>
 
-    <img src="image/fondfinal.png" style=" position: absolute; width: 100%;height: 100%">
+    <img src="image/fondfinal.png" alt="fond boulangerie"style=" position: absolute; width: 100%;height: 100%">
 <div class="dropdown" style="float: left; position: absolute">
     <button onclick="location='index.html'" class="dropbtn" style="background-color: orange; padding:0.5em 1em 0.5em 1em; font-size: 1.5em; border-radius: 1em; color: #555555" >MENU</button>
     <div id="myDropdown" class="dropdown-content">
@@ -40,19 +40,19 @@
 </script>
 
 <div id="deco">
-    <img id="porte" src="image/magasin/porte_delabree.png" style="position:absolute;width: 12%; height: 40%; left: 30%; bottom: 42%">
-    <img id="vase_fleurs" src="image/magasin/vase_fleurs.png" style="position:absolute;width: 11%; left: 18%; bottom: 35%">
-    <img id="fenetre" src="image/magasin/fenetre_delabree.png" style="position:absolute;width: 12%; right: 42%; top: 24%">
-    <img id="fenetre_droite" src="image/magasin/fenetre_droite_delabree.png" style="position:absolute;width: 7%; right: 15%; top: 20%">
-    <img id="table_salon" src="image/magasin/table_salon.png" style="display: none; position: absolute;    width: 16%; top: 45%; right: 33%">
-    <img id="etoile" src="" style="width: 10em; position: absolute; top: 5em; left: 5em;">
-    <img id="fleur" src="" style="width: 10em; position: absolute; top: 5em; left: 15em;">
-    <img id="cercle" src="" style="width: 10em; position: absolute; top: 5em; left: 25em;">
-    <img id="mandala" src="" style="width: 10em; position: absolute; top: 5em; left: 35em;">
-    <img id="rosace" src="" style="width: 10em; position: absolute; top: 5em; left: 45em;">
-    <img id="spirale" src=""     style="width: 10em; position: absolute; top: 5em; left: 55em;">
-    <img id="tapis" hidden src="image/magasin/tapis.png" style="position: absolute ;width: 15%; left: 27%; top: 47%">
-    <img id="presentoire" src="image/presentoire_niveau0.png" style="position: absolute ;width: 15%;  top: 50%; transform: scaleX(-1)">
+    <img alt="porte" id="porte" src="image/magasin/porte_delabree.png" style="position:absolute;width: 12%; height: 40%; left: 30%; bottom: 42%">
+    <img alt="vase_fleurs" id="vase_fleurs" src="image/magasin/vase_fleurs.png" style="position:absolute;width: 11%; left: 18%; bottom: 35%">
+    <img alt="fenetre" id="fenetre" src="image/magasin/fenetre_delabree.png" style="position:absolute;width: 12%; right: 42%; top: 24%">
+    <img alt="fenetre_droite" id="fenetre_droite" src="image/magasin/fenetre_droite_delabree.png" style="position:absolute;width: 7%; right: 15%; top: 20%">
+    <img alt="table_salon" id="table_salon" src="image/magasin/table_salon.png" style="display: none; position: absolute;    width: 16%; top: 45%; right: 33%">
+    <img alt="etoile" id="etoile" src="" style="width: 10em; position: absolute; top: 5em; left: 5em;">
+    <img alt="fleur" id="fleur" src="" style="width: 10em; position: absolute; top: 5em; left: 15em;">
+    <img alt="cercle" id="cercle" src="" style="width: 10em; position: absolute; top: 5em; left: 25em;">
+    <img alt="mandala" id="mandala" src="" style="width: 10em; position: absolute; top: 5em; left: 35em;">
+    <img alt="rosace" id="rosace" src="" style="width: 10em; position: absolute; top: 5em; left: 45em;">
+    <img alt="spirale" id="spirale" src=""     style="width: 10em; position: absolute; top: 5em; left: 55em;">
+    <img alt="tapis" id="tapis" hidden src="image/magasin/tapis.png" style="position: absolute ;width: 15%; left: 27%; top: 47%">
+    <img alt="presentoire" id="presentoire" src="image/presentoire_niveau0.png" style="position: absolute ;width: 15%;  top: 50%; transform: scaleX(-1)">
 </div>
 
 <div style="float: left; ">
@@ -68,24 +68,24 @@ top:5px;
 "></span>
     </div></div>
 
-    <img src="./image/caisse.png" style="
+    <img alt="caisse" src="./image/caisse.png" style="
 position:absolute; width: 13%; top: 70%; left: 15%; transform: scaleX(-1)">
-    <img src="./image/chat.png" style="
+    <img alt="chat" src="./image/chat.png" style="
 position: absolute; width: 12%; left: 10%; top: 72%;">
 </div>
 <div style="position: absolute; margin-bottom: 0.5em;right: 1em;text-align: center;padding:0.5em; font-size: 1.5em; border-radius: 30px; background-color: orangered;">
     <div id="score" style=" height: 1em; font-weight: 1000;"></div>
 
-    <input type="image" src="image/t1.png" style="margin-top: 0.5em;width: 10em;" id="etoiles">
+    <input alt="affichage_tentatives" type="image" src="image/t1.png" style="margin-top: 0.5em;width: 10em;" id="etoiles">
 </div>
 
 
 <div style="position: absolute;bottom: 0em; right: 0em; display: inline-block; text-align: right; ">
     <span id="pieces" style="font-size: 1.5em; font-weight: 1000; bottom:30%; right: 110%; width:200%;position:absolute;"></span>
-    <input type="image" src="image/sous.png" style="width: 10em; ">
+    <input alt = "sous" type="image" src="image/sous.png" style="width: 10em; ">
 
 </div>
-    <img  id="fleche" src="image/next.png" title="SUIVANT" style="display: none; width: 10%; position:absolute;bottom: 10%; right: 10%">
+    <img alt="fleche_suivant" id="fleche" src="image/next.png" title="SUIVANT" style="display: none; width: 10%; position:absolute;bottom: 10%; right: 10%">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script>
