--- a/tuto_debut.html
+++ b/tuto_debut.html
@@ -25,7 +25,7 @@
     Tourne l'écran dans l'autre sens
 </p>
 <div class="preload">
-    <img src="image/chat.png" alt="avion" class="avion">
+    <img src="image/chat.png" alt="chat_chargement" class="avion">
     <h3>Chargement de My Bakery...</h3>
 </div>
 <section>
@@ -35,16 +35,16 @@
 
 
 
-<img src="image/fondfinal.png" style=" position: absolute; width: 100%;height: 100%">
-<img id="fleche_pointeur" title="" src="image/fleche_pointeur.svg" style="transform: scaleY(-1); width: 20%; position:absolute; left: 5%; top: 5%; display: none">
+<img src="image/fondfinal.png" alt = "fond_boulangerie" style=" position: absolute; width: 100%;height: 100%">
+<img id="fleche_pointeur" alt="fleche_pointeur" src="image/fleche_pointeur.svg" style="transform: scaleY(-1); width: 20%; position:absolute; left: 5%; top: 5%; display: none">
 
 <div id="deco">
-    <img id="porte" title="SORTIR" onclick="location='exterieur.html'" src="image/magasin/porte_delabree.png" style="position:absolute;width: 12%; height: 40%; left: 30%; bottom: 42%">
-    <img id="fenetre" src="image/magasin/fenetre_delabree.png" style="position:absolute;width: 12%; right: 42%; top: 24%">
-    <img id="fenetre_droite" src="image/magasin/fenetre_droite_delabree.png" style="position:absolute;width: 7%; right: 15%; top: 20%">
+    <img alt="porte"id="porte" title="SORTIR" onclick="location='exterieur.html'" src="image/magasin/porte_delabree.png" style="position:absolute;width: 12%; height: 40%; left: 30%; bottom: 42%">
+    <img alt="fenetre"id="fenetre" src="image/magasin/fenetre_delabree.png" style="position:absolute;width: 12%; right: 42%; top: 24%">
+    <img alt="fenetre_droite" id="fenetre_droite" src="image/magasin/fenetre_droite_delabree.png" style="position:absolute;width: 7%; right: 15%; top: 20%">
 </div>
 
-<img src="./image/caisse.png" style="
+<img alt="caisse" src="./image/caisse.png" style="
 position:absolute; width: 13%; top: 70%; left: 15%; transform: scaleX(-1)">
 
 <div id="zone2" style="position: relative; width: 700px;  "> </div>
@@ -72,8 +72,8 @@ position:relative;
 top:5px"></span>
 
     </div>
-<img onclick="remplir_bulle()" id="fleche" src="image/next.png" title="SUIVANT" style="display: none; width: 10%; position:absolute;bottom: 10%; right: 10%">
-<img id="presentoire0" title="" src="image/presentoire_niveau0.png" style="position: absolute ;width: 15%;  top: 50%; transform: scaleX(-1)">
+<img onclick="remplir_bulle()" alt="fleche_next"id="fleche" src="image/next.png" title="SUIVANT" style="display: none; width: 10%; position:absolute;bottom: 10%; right: 10%">
+<img id="presentoire0" alt="presentoire" src="image/presentoire_niveau0.png" style="position: absolute ;width: 15%;  top: 50%; transform: scaleX(-1)">
 
 <script>
 function remplir_bulle() {
