--- a/tuto_debut2.html
+++ b/tuto_debut2.html
@@ -25,19 +25,19 @@
     Tourne l'écran dans l'autre sens
 </p>
 <div class="preload">
-    <img src="image/chat.png" alt="avion" class="avion">
+    <img src="image/chat.png" alt="chat_chargement" class="avion">
     <h3>Chargement de My Bakery...</h3>
 </div>
 <section>
     <script src="charger.js"></script>
 
-<img src="image/fondfinal.png" style=" position: absolute; width: 100%;height: 100%">
-<img id="fleche_pointeur" title="" src="image/fleche_pointeur.svg" style="transform: scaleY(-1); width: 20%; position:absolute; left: 5%; top: 5%; display: none">
+<img alt="fond_boulangerie" src="image/fondfinal.png" style=" position: absolute; width: 100%;height: 100%">
+<img alt="fleche_pointeur"id="fleche_pointeur" title="" src="image/fleche_pointeur.svg" style="transform: scaleY(-1); width: 20%; position:absolute; left: 5%; top: 5%; display: none">
 
 <div id="deco">
-    <img id="porte" title="SORTIR" onclick="location='exterieur.html'" src="image/magasin/porte_delabree.png" style="position:absolute;width: 12%; height: 40%; left: 30%; bottom: 42%">
-    <img id="fenetre" src="image/magasin/fenetre_delabree.png" style="position:absolute;width: 12%; right: 42%; top: 24%">
-    <img id="fenetre_droite" src="image/magasin/fenetre_droite_delabree.png" style="position:absolute;width: 7%; right: 15%; top: 20%">
+    <img alt="porte"id="porte" title="SORTIR" onclick="location='exterieur.html'" src="image/magasin/porte_delabree.png" style="position:absolute;width: 12%; height: 40%; left: 30%; bottom: 42%">
+    <img alt="fenetre"id="fenetre" src="image/magasin/fenetre_delabree.png" style="position:absolute;width: 12%; right: 42%; top: 24%">
+    <img alt="fenetre_droite"id="fenetre_droite" src="image/magasin/fenetre_droite_delabree.png" style="position:absolute;width: 7%; right: 15%; top: 20%">
 </div>
 
 </div>
@@ -67,10 +67,10 @@ position:relative;
 top:5px"></span>
 
 </div>
-<img onclick="remplir_bulle()" id="fleche" src="image/next.png" title="SUIVANT" style="display: none; width: 10%; position:absolute;bottom: 10%; right: 10%">
-<img id="presentoire0" title="" src="image/presentoire_niveau0.png" style="position: absolute ;width: 15%;  top: 50%; transform: scaleX(-1)">
-<img id="chien" title="" src="image/chien.PNG" style="position: absolute ;width: 15%;  bottom: 38%; left: 28% ; opacity: 0">
-<img src="./image/caisse.png" style="position:absolute; width: 13%; top: 70%; left: 15%; transform: scaleX(-1)">
+<img onclick="remplir_bulle()" id="fleche" alt="fleche_suivant"src="image/next.png" title="SUIVANT" style="display: none; width: 10%; position:absolute;bottom: 10%; right: 10%">
+<img id="presentoire0" alt="presentoire" src="image/presentoire_niveau0.png" style="position: absolute ;width: 15%;  top: 50%; transform: scaleX(-1)">
+<img id="chien" alt="chien_client" src="image/chien.PNG" style="position: absolute ;width: 15%;  bottom: 38%; left: 28% ; opacity: 0">
+<img src="./image/caisse.png" alt="caisse" style="position:absolute; width: 13%; top: 70%; left: 15%; transform: scaleX(-1)">
 
 <script>
     function remplir_bulle() {
