--- a/tuto_debut3.html
+++ b/tuto_debut3.html
@@ -32,17 +32,17 @@
     Tourne l'écran dans l'autre sens
 </p>
 <div class="preload">
-    <img src="image/chat.png" alt="avion" class="avion">
+    <img src="image/chat.png" alt="chat_chargement" class="avion">
     <h3>Chargement de My Bakery...</h3>
 </div>
 <section>
     <script src="charger.js"></script>
 
-<img src="image/fondfinal.png" style=" position: absolute; width: 100%;height: 100%">
-<img id="fleche_pointeur" title="" src="image/fleche_pointeur.svg" style="transform: scaleY(-1); width: 20%; position:absolute; right: 30%; top: 15%; display: none; z-index: 1">
+<img src="image/fondfinal.png" alt="fond_boulangerie"style=" position: absolute; width: 100%;height: 100%">
+<img id="fleche_pointeur" alt="fleche_pointeur" src="image/fleche_pointeur.svg" style="transform: scaleY(-1); width: 20%; position:absolute; right: 30%; top: 15%; display: none; z-index: 1">
 
-    <img id="fenetre" src="image/magasin/fenetre_delabree.png" style="position:absolute;width: 12%; right: 42%; top: 24%">
-    <img id="fenetre_droite" src="image/magasin/fenetre_droite_delabree.png" style="position:absolute;width: 7%; right: 15%; top: 20%">
+    <img id="fenetre" alt="fenetre"src="image/magasin/fenetre_delabree.png" style="position:absolute;width: 12%; right: 42%; top: 24%">
+    <img id="fenetre_droite"alt="fenetre_droite" src="image/magasin/fenetre_droite_delabree.png" style="position:absolute;width: 7%; right: 15%; top: 20%">
 
 </div>
 
@@ -73,11 +73,11 @@ top:5px"></span>
 
 </div>
 
-<img onclick="remplir_bulle()" id="fleche" src="image/next.png" title="SUIVANT" style="display: none; width: 10%; position:absolute;bottom: 10%; right: 10%">
-<img id="presentoire0" title="" src="image/presentoire_niveau0.png" style="position: absolute ;width: 15%;  top: 50%; transform: scaleX(-1)">
-<img id="chien" title="" src="image/chien.PNG" style="position: absolute ;width: 15%;  bottom: 38%; left: 28% ; opacity: 0">
+<img onclick="remplir_bulle()" id="fleche" alt="fleche_suivant" src="image/next.png" title="SUIVANT" style="display: none; width: 10%; position:absolute;bottom: 10%; right: 10%">
+<img id="presentoire0" alt="presentoire" src="image/presentoire_niveau0.png" style="position: absolute ;width: 15%;  top: 50%; transform: scaleX(-1)">
+<img id="chien" alt="chien_client" src="image/chien.PNG" style="position: absolute ;width: 15%;  bottom: 38%; left: 28% ; opacity: 0">
 <div id="zone3" style="z-index:0;position: absolute; top: 0em; width: 700px; height: 350px;  "> </div>
-<img src="./image/caisse.png" style="position:absolute; width: 13%; top: 70%; left: 15%; transform: scaleX(-1)">
+<img src="./image/caisse.png" alt="caisse" style="position:absolute; width: 13%; top: 70%; left: 15%; transform: scaleX(-1)">
 <div id="bulle_chat" style="position: absolute;
     right:10%;
     top: 10%;
@@ -121,10 +121,10 @@ color: blueviolet"></span>
 
     <div id="div_pieces" style="opacity: 0;position: absolute;bottom: 0em; right: 0em; display: inline-block; text-align: right; ">
         <span id="pieces" style="font-size: 1.5em; font-weight: 1000; bottom:30%; right: 110%; width:200%;position:absolute;"></span>
-        <input type="image" src="image/sous.png" style="width: 10em; ">
+        <input type="image" alt="sous"src="image/sous.png" style="width: 10em; ">
 
     </div>
-<img id="porte0" title="SORTIR" src="image/magasin/porte_delabree.png" style="position:absolute;width: 12%; height: 40%; left: 30%; bottom: 42%; z-index: 0">
+<img id="porte0" title="SORTIR" alt="porte"src="image/magasin/porte_delabree.png" style="position:absolute;width: 12%; height: 40%; left: 30%; bottom: 42%; z-index: 0">
 <div id="calculette" style="display:none;position:absolute;
 left: 50%;top: 60%;background-color: orangered; width: 37%; height: 10% bottom: 10em; border-radius: 40px">
     <span id="calcul" style=" width: 30%; text-align:left;display:none; margin: auto; margin-top: 0.5em; font-family: ComicFighter, Georgia; font-weight:bold;font-size:2em; "></span>
