--- a/tuto_magasin.html
+++ b/tuto_magasin.html
@@ -18,21 +18,21 @@
     Tourne l'écran dans l'autre sens
 </p>
 <div class="preload">
-    <img src="image/chat.png" alt="avion" class="avion">
+    <img src="image/chat.png" alt="chat_chargement" class="avion">
     <h3>Chargement de My Bakery...</h3>
 </div>
 <section>
     <script src="charger.js"></script>
 
 
-<img onclick="remplir_bulle()" id="fleche" src="image/next.png" title="SUIVANT" style="display: none; width: 10%; position:absolute;bottom: 10%; right: 10%">
+<img onclick="remplir_bulle()" id="fleche" alt=fleche_next" src="image/next.png" title="SUIVANT" style="display: none; width: 10%; position:absolute;bottom: 10%; right: 10%">
 
-<img id="fleche_pointeur" title="" src="image/fleche_pointeur.svg" style="transform: rotate(90deg); width: 15%; position:absolute; left: 15%; top: 7%; display: none">
+<img id="fleche_pointeur" alt="fleche_pointeur" src="image/fleche_pointeur.svg" style="transform: rotate(90deg); width: 15%; position:absolute; left: 15%; top: 7%; display: none">
 
 <!--PIECES-->
 <div style="position: absolute;bottom: 0px; right: 0px; display: inline-block; text-align: center">
     <span id="pieces" style="font-size: 2em"></span>
-    <img src="image/sous.png" style="width: 7em; ">
+    <img src="image/sous.png" alt="sous" style="width: 7em; ">
 </div>
 
 
