--- a/tuto_magasin2.html
+++ b/tuto_magasin2.html
@@ -17,21 +17,21 @@
     Tourne l'écran dans l'autre sens
 </p>
 <div class="preload">
-    <img src="image/chat.png" alt="avion" class="avion">
+    <img src="image/chat.png" alt="chat_chargement" class="avion">
     <h3>Chargement de My Bakery...</h3>
 </div>
 <section>
     <script src="charger.js"></script>
 
-<img id="retour" src="image/fleche.svg" style="display: none;position: absolute; bottom: 0; left: 0;width: 7em; transform: rotate(-90deg)" title="RETOUR" >
+<img id="retour" src="image/fleche.svg" alt="fleche_retour" style="display: none;position: absolute; bottom: 0; left: 0;width: 7em; transform: rotate(-90deg)" title="RETOUR" >
 
 <!--PIECES-->
 <div style="position: absolute;bottom: 0px; right: 0px; display: inline-block; text-align: center">
     <span id="pieces" style="font-size: 2em"></span>
-    <img src="image/sous.png" style="width: 10em; ">
+    <img src="image/sous.png" alt="sous"style="width: 10em; ">
 </div>
 
-<img onclick="remplir_bulle()" id="fleche" src="image/next.png" title="SUIVANT" style="display: none; width: 10%; position:absolute;bottom: 10%; right: 10%">
+<img onclick="remplir_bulle()" id="fleche" alt="flehe_next"src="image/next.png" title="SUIVANT" style="display: none; width: 10%; position:absolute;bottom: 10%; right: 10%">
 
 <div id="zone2" style="position: absolute; width: 170px; height: 100px; "> </div>
 
